0.1.2
- fix to parsing of code/expression blocks to insure that non-ascii characters, combined
with a template that indicates a non-standard encoding, are expanded into backslash-escaped 
glyphs before being AST parsed [ticket:11]
- added module_filename argument to Template to allow specification of a specific module
file
- added modulename_callable to TemplateLookup to allow a function to determine module filenames
(takes filename, uri arguments).  used for [ticket:14]
- added optional input_encoding flag to Template, to allow sending a unicode() object with no
magic encoding comment

0.1.1
- buffet plugin supports string-based templates, allows ToscaWidgets to work [ticket:8]
- AST parsing fixes: fixed TryExcept identifier parsing
- removed textmate tmbundle from contrib and into separate SVN location; windows users
cant handle those files, setuptools not very good at "pruning" certain directories
- fix so that "cache_timeout" parameter is propigated
- fix to expression filters so that string conversion (actually unicode) properly 
occurs before filtering
- better error message when a lookup is attempted with a template that has no lookup
- implemented "module" attribute for namespace
- fix to code generation to correctly track multiple defs with the same name
- "directories" can be passed to TemplateLookup as a scalar in which case it gets
converted to a list [ticket:9]

0.1.0

Initial release.